Rename workflow file to fetch latest YouTube video

--- a/.github/workflows/fetch-latest-youtube-video.yml
+++ b/.github/workflows/fetch-latest-youtube-video.yml
@@ -8,7 +8,8 @@ on:
     branches: [ "gh-pages" ]
 
 jobs:
-  build:
+  fetch:
+    environment: youtube-api
     runs-on: ubuntu-latest
     steps:
     - name: Pull latest video
