--- a/.github/workflows/fetch-latest-video.yml
+++ b/.github/workflows/fetch-latest-video.yml
@@ -9,7 +9,8 @@ jobs:
     steps:
       - name: Trigger fetch workflow
         run: |
-          curl -X POST \
+          curl -L \
+            -X POST \
             -H "Authorization: Bearer ${{ secrets.PAT }}" \
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/${{ github.repository }}/actions/workflows/fetch-latest-video.yml/dispatches \
