--- a/.github/workflows/fetch-latest-video.yml
+++ b/.github/workflows/fetch-latest-video.yml
@@ -8,7 +8,7 @@ on:
     
 jobs:
   trigger:
-    environment: gh-pages
+    environment: github-pages
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Fetch Latest Video
